# movie-club

./: .env.dev  .env.example  .gitignore  Dockerfile  README.md  config.py  dev.sh  docker-compose.dev.yml  docker-compose.yml  main.py  monitor.sh  package-lock.json  package.json  pyproject.toml  server.js  tmdb_api.py
movie-club-api/: Dockerfile  main.py  pyproject.toml
movie-club-api/app/api/endpoints/: movies.py  users.py
movie-club-api/app/core/: config.py
movie-club-api/app/schemas/: movie.py
movie-club-api/app/services/: movie_service.py
movie-club-web/: Dockerfile  Dockerfile.api  Dockerfile.api.dev  Dockerfile.dev  api-server.js  movie-data.json  nginx.conf  package-lock.json  package.json  tailwind.config.js
movie-club-web/public/: config.js  index.html
movie-club-web/src/: App.tsx
movie-club-web/src/components/: GenreFilter.tsx  MovieCard.tsx  MovieDetail.tsx  MovieGrid.tsx  RandomMoviePicker.tsx
movie-club-web/src/services/: movieService.ts
movie-club-web/src/types/: movie.ts
scripts/: backup.sh  deploy.sh  dev.sh
slack-bot/: Dockerfile  docker_entrypoint.py  main.py  pyproject.toml  test_slack_connectivity.py
slack-bot/src/: api_client.py  cli_functions.py  config.py  slack_bot.py
slack-bot/src/api/: client.py
slack-bot/src/commands/: __init__.py  command_base.py  movie_commands.py
slack-bot/src/handlers/: __init__.py  cache_management.py  command_handlers.py  message_handlers.py  pagination.py
slack-bot/src/models/: movie.py  movie_tracking.py
src/: config.py  slack_bot.py  tmdb_api.py
