[project]
name = "movie-club"
version = "0.1.0"
description = "Movie Club Slack Bot for managing and discussing movies"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "slack-bolt>=1.23.0",
    "pydantic>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.uv]
default-dependencies = true
